--- a/www/index.html
+++ b/www/index.html
@@ -12,12 +12,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- Bootsrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
     <!-- Particle js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
         type="text/javascript"></script>
 
-        <!-- TEXTLLATE -->
-         <link rel="stylesheet" href="assets/vendore/texllate/animate.css">
+    <!-- Siri Wave -->
+    <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
+
+    <!-- TEXTLLATE -->
+    <link rel="stylesheet" href="assets/vendore/texllate/animate.css">
 
     <link rel="stylesheet" href="style.css">
 
@@ -25,54 +31,92 @@
 </head>
 
 <body>
+    <div class="container">
 
-    <section id="Oval" class="mb-4">
+        <section id="Oval" class="mb-4">
 
-        <div class="row">
-            <div class="clo-md-1"></div>
-            <div class="clo-md-10">
-                <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+            <div class="row">
+                <div class="clo-md-1"></div>
+                <div class="clo-md-10">
+                    <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
 
-                    <canvas id="canvasOne" width="700px" height="420px" style="position: absolute;"></canvas>
+                        <canvas id="canvasOne" width="700px" height="420px" style="position: absolute;"></canvas>
 
-                    <div id="JarvisHood">
-                        <div class="square">
-                            <span class="circle"></span>
-                            <span class="circle"></span>
-                            <span class="circle"></span>
+                        <div id="JarvisHood">
+                            <div class="square">
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <h5 class="text-light text text-center">Ask me anything</h5>
+
+                    <div class="col-md-12 mt-4 pt-4">
+                        <div class="text-center">
+                            <div id="TextInput" class="d-flex">
+
+                                <input type="text" class="input-field" name="chatbox" id="chatbox"
+                                    placeholder="type here ... ">
+                                <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
+                                <button id="ChatBtn" class="glow-on-hover"><i class="bi bi-chat-dots"></i></button>
+                                <button id="SettingsBtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
+
+                            </div>
                         </div>
                     </div>
 
                 </div>
+                <div class="clo-md-1"></div>
 
-                <h5 class="text-light text text-center">Ask me anything</h5>
             </div>
-            <div class="clo-md-1"></div>
 
-        </div>
+        </section>
 
-    </section>
+        <section id="siriwave" class="mb-4" hidden>
 
+            <div class="container">
+                <div class="eow">
+                    <div class="col-md-12">
+                        <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+                            <div class="">
+                                <p class="text-start text-light mb-4 siri-message">Hello, I am J.R.V.I.S</p>
+                                <div id="siri-container"></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </div>
     <!--Jquery  -->
-   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    
-        <!-- Particle js -->
-         <script src="script.js"></script>
 
-        <!-- Texllate -->
-        <script src="assets/vendore/texllate/jquery.fittext.js"></script>
-        <script src="assets/vendore/texllate/jquery.lettering.js"></script>
-        <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
- 
-        
+    <!-- Particle js -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
 
-        <script src="main.js"></script>
-        <script src="/eel.js"></script>
+    <script src="script.js"></script>
+
+    <!-- Texllate -->
+    <script src="assets/vendore/texllate/jquery.fittext.js"></script>
+    <script src="assets/vendore/texllate/jquery.lettering.js"></script>
+    <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
+
+
+
+    <script src="main.js"></script>
+    <script src="controller.jd"></script>
+    <script src="/eel.js"></script>
 </body>
 
 </html>
