--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@
 
 
     <script src="main.js"></script>
-    <script src="controller.jd"></script>
+    <script src="controller.js"></script>
     <script src="/eel.js"></script>
 </body>
 
